fix foter, header and readme

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <footer class="footer">
         <div class="container _container">
             <img class="footer-img" src="./images/TechGuru-Logo.png" alt="">
-            <span>Tech Guru 2022 Some Right Reserved. </span>
+            <span>Tech Guru 2022  Thika Kenya Some Right Reserved. </span>
         </div>
     </footer>
     <!-- Footer Section End -->
